// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TextInput Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-omlpnd"
    >
       
      <input
        class="svelte-omlpnd"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Icon And Placeholder 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-omlpnd icon"
    >
      <i
        class="material-icons svelte-omlpnd"
      >
        search
      </i>
       
      <input
        class="svelte-omlpnd"
        placeholder="search..."
        type="search"
      />
    </span>
  </span>
</section>
`;

exports[`Storyshots Components/TextInput With Value 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="inline-block w-64"
  >
    <span
      class="svelte-omlpnd icon"
    >
      <i
        class="material-icons svelte-omlpnd"
      >
        person
      </i>
       
      <input
        class="svelte-omlpnd"
        placeholder=""
        type="text"
      />
    </span>
  </span>
</section>
`;
